# AoC2025

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
core/: CMakeLists.txt
core/include/: args.h
core/src/: args.cpp
day1/: day1.cpp
day2/: day2.cpp
template/: dayX.cpp
